partial fix of issue #19 intrinsec k was used instead of K for water flows calculation in mono and multilayer configuration. The multilayer matrix was properly filled. I don't know yet the monolayer. Need to be checked. But the solution of the multilayer problem doesn't work (ie fix of the 2023 edition not implemented in pyheatmy)

--- a/pyheatmy/pyheatmy/DREAM_v1.ipynb
+++ b/pyheatmy/pyheatmy/DREAM_v1.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from layers import AllPriors,LayerPriors, Layer, getListParameters\n",
-    "PARAM_LIST = (\"moinslog10K\", \"n\", \"lambda_s\", \"rhos_cs\")"
+    "PARAM_LIST = (\"moinslog10IntrinK\", \"n\", \"lambda_s\", \"rhos_cs\")"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "params = Param(\n",
-    "    moinslog10K = 4,\n",
+    "    moinslog10IntrinK = 4,\n",
     "    n = .1,\n",
     "    lambda_s = 2,\n",
     "    rhos_cs = 4e6\n",
@@ -159,21 +159,21 @@
    "outputs": [],
    "source": [
     "priors_couche_1 = {\n",
-    "    \"moinslog10K\": ((1, 10), .01), # (intervalle, sigma)\n",
+    "    \"moinslog10IntrinK\": ((1, 10), .01), # (intervalle, sigma)\n",
     "    \"n\": ((.001, .25), .005),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
     "}\n",
     "\n",
     "priors_couche_2 = {\n",
-    "    \"moinslog10K\": ((4, 9), .01), # (intervalle, sigma)\n",
+    "    \"moinslog10IntrinK\": ((4, 9), .01), # (intervalle, sigma)\n",
     "    \"n\": ((.001, .25), .005),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
     "}\n",
     "\n",
     "priors_couche_3 = {\n",
-    "    \"moinslog10K\": ((4, 9), .01), # (intervalle, sigma)\n",
+    "    \"moinslog10IntrinK\": ((4, 9), .01), # (intervalle, sigma)\n",
     "    \"n\": ((.001, .25), .005),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
