--- a/pyheatmy/research/demo_H_strat_zhanJING.ipynb
+++ b/pyheatmy/research/demo_H_strat_zhanJING.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "params = Param(\n",
-    "    moinslog10K = 4+7,\n",
+    "    moinslog10IntrinK = 4+7,\n",
     "    n = .1,\n",
     "    lambda_s = 2,\n",
     "    rhos_cs = 4e6\n",
