--- a/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_experiment_monolayer(depth_sensors, dH_offset, name, moinslog10K, n, lambda_s, rho_cs, nb_cells=nb_cells, perturb=\"False\"):\n",
+    "def gen_experiment_monolayer(depth_sensors, dH_offset, name, moinslog10IntrinK, n, lambda_s, rho_cs, nb_cells=nb_cells, perturb=\"False\"):\n",
     "    \"\"\"Génération de l'expérience pour une seule couche\"\"\"\n",
     "    # définition de l'expérience \n",
     "    \"\"\"Times series\"\"\"\n",
@@ -134,7 +134,7 @@
     "    monolayer_dict = {\n",
     "        \"name\": name,\n",
     "        \"zLow\": depth_sensors[-1],\n",
-    "        \"moinslog10K\": moinslog10K,\n",
+    "        \"moinslog10IntrinK\": moinslog10IntrinK,\n",
     "        \"n\": n,\n",
     "        \"lambda_s\": lambda_s,\n",
     "        \"rhos_cs\": rho_cs\n",
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "# si la version multilayer est définie, la version monolayer sert simplement à obtenir la valeur RMSE avec la solution analytique\n",
-    "def gen_experiment_multilayer(depth_sensors, dH_offset, name_list, zLow_list, moinslog10K_list, n_list, lambda_s_list, rho_cs_list, nb_cells, perturb=\"False\"):\n",
+    "def gen_experiment_multilayer(depth_sensors, dH_offset, name_list, zLow_list, moinslog10IntrinK_list, n_list, lambda_s_list, rho_cs_list, nb_cells, perturb=\"False\"):\n",
     "    \"\"\"Génération de l'expérience pour plusieurs couches et on ne génère pas de réponse analytique\"\"\"\n",
     "    # définition de l'expérience \n",
     "    \"\"\"Times series\"\"\"\n",
@@ -200,7 +200,7 @@
     "    colonne_exp = Column.from_dict(col_dict)\n",
     "\n",
     "    \"\"\"Layer\"\"\"\n",
-    "    layers_list= layersListCreator([(name_list[i], zLow_list[i], moinslog10K_list[i], n_list[i], lambda_s_list[i], rho_cs_list[i]) for i in range(len(name_list))])\n",
+    "    layers_list= layersListCreator([(name_list[i], zLow_list[i], moinslog10IntrinK_list[i], n_list[i], lambda_s_list[i], rho_cs_list[i]) for i in range(len(name_list))])\n",
     "\n",
     "    return time_series, colonne_exp, layers_list\n"
    ]
@@ -231,7 +231,7 @@
     "    \"depth_sensors\": [.25, .5, .75, 1],\n",
     "    \"dH_offset\": 0.5,\n",
     "    \"name\" : \"sable\",\n",
-    "    \"moinslog10K\": 12,\n",
+    "    \"moinslog10IntrinK\": 12,\n",
     "    \"n\": 0.1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rho_cs\": 4e6,\n",
@@ -268,7 +268,7 @@
     "    \"depth_sensors\": [.25, .5, .75, 1],\n",
     "    \"dH_offset\": -0.5,\n",
     "    \"name\" : \"sable\",\n",
-    "    \"moinslog10K\": 12,\n",
+    "    \"moinslog10IntrinK\": 12,\n",
     "    \"n\": 0.1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rho_cs\": 4e6,\n",
@@ -302,7 +302,7 @@
     "    \"depth_sensors\": [.25, .5, .75, 1],\n",
     "    \"dH_offset\": 0.5,\n",
     "    \"name\" : \"sable\",\n",
-    "    \"moinslog10K\": 5,\n",
+    "    \"moinslog10IntrinK\": 5,\n",
     "    \"n\": 0.1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rho_cs\": 4e6,\n",
@@ -336,7 +336,7 @@
     "    \"depth_sensors\": [.25, .5, .75, 1],\n",
     "    \"dH_offset\": -0.5,\n",
     "    \"name\" : \"sable\",\n",
-    "    \"moinslog10K\": 12,\n",
+    "    \"moinslog10IntrinK\": 12,\n",
     "    \"n\": 0.1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rho_cs\": 4e6,\n",
@@ -380,7 +380,7 @@
     "    \"dH_offset\": 1,\n",
     "    \"name_list\": [\"sable\",\"argile\"],\n",
     "    \"zLow_list\": [.25,0.5],\n",
-    "    \"moinslog10K_list\": [5,4],\n",
+    "    \"moinslog10IntrinK_list\": [5,4],\n",
     "    \"n_list\": [.26,.3],\n",
     "    \"lambda_s_list\": [1,5],\n",
     "    \"rho_cs_list\": [8e5,3e6],\n",
@@ -415,7 +415,7 @@
     "    \"dH_offset\": -0.5,\n",
     "    \"name_list\": [\"sable\",\"argile\"],\n",
     "    \"zLow_list\": [.25,0.5],\n",
-    "    \"moinslog10K_list\": [5,4],\n",
+    "    \"moinslog10IntrinK_list\": [5,4],\n",
     "    \"n_list\": [.26,.3],\n",
     "    \"lambda_s_list\": [1,5],\n",
     "    \"rho_cs_list\": [8e5,3e6],\n",
@@ -466,7 +466,7 @@
     "    \"dH_offset\": 0.5,\n",
     "    \"name_list\": [\"gravier\",\"sable\",\"argile\"],\n",
     "    \"zLow_list\": [.15,.25,.4],\n",
-    "    \"moinslog10K_list\": [12,12,12],\n",
+    "    \"moinslog10IntrinK_list\": [12,12,12],\n",
     "    \"n_list\": [.5,.3,.1],\n",
     "    \"lambda_s_list\": [2,2,2],\n",
     "    \"rho_cs_list\": [4e6,4e6,4e6],\n",
@@ -501,7 +501,7 @@
     "    \"dH_offset\": -0.5,\n",
     "    \"name_list\": [\"gravier\",\"sable\",\"argile\"],\n",
     "    \"zLow_list\": [.15,.25,.4],\n",
-    "    \"moinslog10K_list\": [12,12,12],\n",
+    "    \"moinslog10IntrinK_list\": [12,12,12],\n",
     "    \"n_list\": [.5,.3,.1],\n",
     "    \"lambda_s_list\": [2,2,2],\n",
     "    \"rho_cs_list\": [4e6,4e6,4e6],\n",
@@ -543,7 +543,7 @@
     "    \"dH_offset\": 0.5,\n",
     "    \"name_list\": [\"gravier\",\"sable\",\"argile\"],\n",
     "    \"zLow_list\": [.21,.27,.4],\n",
-    "    \"moinslog10K_list\": [12,12,12],\n",
+    "    \"moinslog10IntrinK_list\": [12,12,12],\n",
     "    \"n_list\": [.5,.3,.1],\n",
     "    \"lambda_s_list\": [2,2,2],\n",
     "    \"rho_cs_list\": [4e6,4e6,4e6],\n",
@@ -578,7 +578,7 @@
     "    \"dH_offset\": -0.5,\n",
     "    \"name_list\": [\"gravier\",\"sable\",\"argile\"],\n",
     "    \"zLow_list\": [.21,.27,.4],\n",
-    "    \"moinslog10K_list\": [12,12,12],\n",
+    "    \"moinslog10IntrinK_list\": [12,12,12],\n",
     "    \"n_list\": [.5,.3,.1],\n",
     "    \"lambda_s_list\": [2,2,2],\n",
     "    \"rho_cs_list\": [4e6,4e6,4e6],\n",
