--- a/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
@@ -210,13 +210,13 @@
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name =\"Couche en sable\"\n",
     "zLow = 1\n",
-    "moinslog10K = 10\n",
+    "moinslog10IntrinK = 10\n",
     "n = 0.1\n",
     "lambda_s = 2 # test cas purement advectif\n",
     "rhos_cs = 4e6\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list= layersListCreator([(name, zLow, moinslog10K, n, lambda_s, rhos_cs)])\n",
+    "layers_list= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
     "\n",
     "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
     "col_dict = {\n",
@@ -471,7 +471,7 @@
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name =\"Couche en sable\"\n",
     "zLow = 0.4\n",
-    "moinslog10K = 12\n",
+    "moinslog10IntrinK = 12\n",
     "n = 0.1\n",
     "lambda_s = 2 \n",
     "rhos_cs = 4e6\n",
@@ -490,7 +490,7 @@
     "col2 = Column.from_dict(col_dict2)\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list2= layersListCreator([(name, zLow, moinslog10K, n, lambda_s, rhos_cs)])"
+    "layers_list2= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs)])"
    ]
   },
   {
@@ -628,7 +628,7 @@
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name = [\"gravier\",\"Couche en sable\"]\n",
     "zLow = [.2,.4]\n",
-    "moinslog10K = [4,10]\n",
+    "moinslog10IntrinK = [4,10]\n",
     "n = [.4,.1]\n",
     "lambda_s = [2,2] \n",
     "rhos_cs = [4e6,4e6]\n",
@@ -647,7 +647,7 @@
     "col4 = Column.from_dict(col_dict4)\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list4= layersListCreator([(name[i], zLow[i], moinslog10K[i], n[i], lambda_s[i], rhos_cs[i]) for i in range(len(name))])"
+    "layers_list4= layersListCreator([(name[i], zLow[i], moinslog10IntrinK[i], n[i], lambda_s[i], rhos_cs[i]) for i in range(len(name))])"
    ]
   },
   {
