--- a/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "nb_cells = 100\n",
     "depth_sensors = [.1, .2, .3, 1]\n",
-    "moinslog10K = 12\n",
+    "moinslog10IntrinK = 12\n",
     "n = .1\n",
     "lambda_s = 2\n",
     "rho_cs = 4e6\n"
@@ -108,7 +108,7 @@
     "monolayer_dict = {\n",
     "    \"name\": \"sable\",\n",
     "    \"zLow\": depth_sensors[-1],\n",
-    "    \"moinslog10K\": moinslog10K,\n",
+    "    \"moinslog10IntrinK\": moinslog10IntrinK,\n",
     "    \"n\": n,\n",
     "    \"lambda_s\": lambda_s,\n",
     "    \"rhos_cs\": rho_cs\n",
