Direct model and Inversion with a simple MCMC are working. All functionnality of the monolithic Column Class in demoPyheatmy.ipynb. The issue 19 is now fixed

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
     "depth_sensors = [.1, .2, .3, .4]\n",
     "\n",
     "\"\"\"Bruit de mesure\"\"\"\n",
-    "sigma_meas_P = 0.1\n",
+    "sigma_meas_P = 0.001\n",
     "sigma_meas_T = 1.\n",
     "\n",
     "print(\"dt={0:.1f}s\".format(dt))"
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "emu_observ_test_user1._generate_all_series()\n",
+    "emu_observ_test_user1._generate_all_series(verbose=False)\n",
     "\n"
    ]
   },
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name =\"Couche en sable\"\n",
     "zLow = 0.4\n",
-    "moinslog10IntrinK = 15\n",
+    "moinslog10IntrinK = 11\n",
     "n = 0.1\n",
     "lambda_s = 2 # test cas purement advectif\n",
     "rhos_cs = 4e6\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,8 +230,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"methode column verifiee\")\n",
-    "col.plot_temperature_at_sensors()\n"
+    "col.plot_temperature_at_sensors(verbose=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On compare simul et obs, normalement idem...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col.plot_compare_temperatures_sensors()"
    ]
   },
   {
@@ -288,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
