generation of a synthetic data set works for an homogeneous column. Need now to be read and debug the plot function of time series. All is in demo_genData.ipynb

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "It is based on real data, which can be found in the `data` folder.\n",
     "\n",
-    "We recommend reading the API for more details. Here is the link: https://docs.google.com/document/d/10Dg6cG3xIiW4Z16mf82bxy_PIjElxOtVL6GUOn6Fwqw/edit#heading=h.b6p58tg5djyo"
+    "We recommend reading the API for more details. "
    ]
   },
   {
