--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Generating synthetic data sets of a river bed column forced by monoperiodic river and aquifer temperature signals\n",
     "\n",
-    "2024 adapted by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
+    "2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
     "\n",
     "L'objet de cette démo est de présenter une classe chargée de générer une simulation des données des capteurs de pression et de température dans le cas où l'on ne disposerait pas de données issues du projet CAPTEUR. Based on the ``Time_series`` class in ``gen_test.py``\n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +79,11 @@
     "\n",
     "\n",
     "depth_sensors = [.1, .2, .3, .4]\n",
+    "Zbottom = 0.4\n",
     "\n",
     "\"\"\"Bruit de mesure\"\"\"\n",
     "sigma_meas_P = 0.001\n",
-    "sigma_meas_T = 1.\n",
+    "sigma_meas_T = 0.1\n",
     "\n",
     "print(\"dt={0:.1f}s\".format(dt))"
    ]
@@ -123,13 +124,13 @@
     "# instanciation du simulateur de données\n",
     "emu_observ_test_user1 = Time_series.from_dict(time_series_dict_user1)\n",
     "\n",
-    "print(\"Checking params time series\")\n",
-    "print(\"param_time_dates:\", emu_observ_test_user1._param_dates)\n",
-    "print(\"param_dH_signal:\", emu_observ_test_user1._param_dH)\n",
-    "print(\"param_T_riv_signal:\", emu_observ_test_user1._param_T_riv)\n",
-    "print(\"param_T_aq_signal:\", emu_observ_test_user1._param_T_aq)\n",
-    "print(\"sigma_meas_P:\", emu_observ_test_user1._sigma_P)\n",
-    "print(\"sigma_meas_T:\", emu_observ_test_user1._sigma_T)\n"
+    "# print(\"Checking params time series\")\n",
+    "# print(\"param_time_dates:\", emu_observ_test_user1._param_dates)\n",
+    "# print(\"param_dH_signal:\", emu_observ_test_user1._param_dH)\n",
+    "# print(\"param_T_riv_signal:\", emu_observ_test_user1._param_T_riv)\n",
+    "# print(\"param_T_aq_signal:\", emu_observ_test_user1._param_T_aq)\n",
+    "# print(\"sigma_meas_P:\", emu_observ_test_user1._sigma_P)\n",
+    "# print(\"sigma_meas_T:\", emu_observ_test_user1._sigma_T)\n"
    ]
   },
   {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name =\"Couche en sable\"\n",
-    "zLow = 0.4\n",
-    "moinslog10IntrinK = 11\n",
+    "zLow = Zbottom\n",
+    "moinslog10IntrinK = 10\n",
     "n = 0.1\n",
     "lambda_s = 2 # test cas purement advectif\n",
     "rhos_cs = 4e6\n",
@@ -211,26 +212,11 @@
    "source": [
     "# on résout le modèle direct avec les observations simulées\n",
     "nb_cells = 100\n",
-    "emu_observ_test_user1._measures_column_one_layer(col, layers_list, nb_cells)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import os\n",
-    "col.print_in_file_processed_MOLONARI_dataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col.plot_temperature_at_sensors(verbose=False)\n"
+    "print(emu_observ_test_user1._T_Shaft)\n",
+    "emu_observ_test_user1._measures_column_one_layer(col, layers_list, nb_cells)\n",
+    "emu_observ_test_user1._plot_molonariT_data()\n",
+    "col.plot_temperature_at_sensors(verbose=False)\n",
+    "\n"
    ]
   },
   {
@@ -246,6 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "col.plot_compare_temperatures_sensors()"
    ]
   },
@@ -262,101 +249,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now creating a new column created with the generated case study"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
+    "newCol_dict = {\n",
+    "\t\"river_bed\": 1., \n",
+    "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "\t\"offset\": .0,\n",
+    "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
+    "    \"T_measures\": emu_observ_test_user1._molonariT_data,\n",
+    "    \"sigma_meas_P\": None, #float\n",
+    "    \"sigma_meas_T\": None, #float\n",
+    "}\n",
+    "newCol = Column.from_dict(newCol_dict)\n",
+    "newCol.compute_solve_transi(layers_list, nb_cells,verbose=False)\n",
+    "\n",
+    "nt = len(col._temperatures[0,:])\n",
+    "dplot=15\n",
+    "newCol.plot_temperatures_umbrella(round(nt/dplot))\n",
+    "\n",
     "flows = col.get_flows_solve()\n",
     "unitLeg=\"m/s\"\n",
     "title=\"Débits\"\n",
-    "col.plot_it_Zt(flows,title,unitLeg,1.04,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temperatures = col.get_temperatures_solve()\n",
-    "unitLeg=\"°C\"\n",
-    "title=\"Températures\"\n",
-    "col.plot_it_Zt(temperatures,title,unitLeg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col.plot_CALC_results()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Cas avec perturbation des observations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user1._generate_all_series()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# les sorties des différents capteurs après passage dans le modèle direct\n",
-    "nt = 3000\n",
-    "plt.plot(emu_observ_test_user1._T_riv_perturb[:nt], label=\"Triv\")\n",
-    "n_sens = len(emu_observ_test_user1._T_Shaft_perturb[0])\n",
-    "for i in range(n_sens-1):\n",
-    "    plt.plot(emu_observ_test_user1._T_Shaft_perturb[:nt,i], label=\"T{}\".format(i+1))\n",
-    "plt.plot(emu_observ_test_user1._T_Shaft_perturb[:nt,n_sens-1], label=\"Taq\")\n",
-    "plt.legend()\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test valeur par défaut de la classe émulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_series_dict_user3 = {\n",
-    "    \"offset\" : 0,\n",
-    "    \"depth_sensors\":depth_sensors,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user3 = Time_series.from_dict(time_series_dict_user3)\n",
+    "newCol.plot_it_Zt(flows,title,unitLeg,1.04,2)\n",
     "\n",
-    "emu_observ_test_user3._generate_Shaft_Temp_series()\n",
-    "emu_observ_test_user3._T_Shaft_measures"
+    "newCol.print_RMSE_at_sensor()\n",
+    "newCol.plot_compare_temperatures_sensors()\n",
+    "col.plot_CALC_results()\n",
+    "newCol.print_in_file_processed_MOLONARI_dataset()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Need to generate a MOLONARI dataset in core_py, printing the T at sensors and P measured. Ie a sort of export Processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -367,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
