new generic printing facilities. Removal of demo_cas_test.ipynb and demo_gen_test.ipynb, both replaced by demo_genData.ipynb in research/synthetic_cases_generator

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
     "\n",
-    "L'objet de cette démo est de présenter une classe chargée de générer une simulation des données des capteurs de pression et de température dans le cas où l'on ne disposerait pas de données issues du projet CAPTEUR. Based on the ``Time_series`` class in ``gen_test.py``\n",
+    "L'objet de cette démo est de présenter une classe chargée de générer une simulation des données des capteurs de pression et de température dans le cas où l'on ne disposerait pas de données issues du projet CAPTEUR. Based on the ``Time_series`` class in ``time_series.py``\n",
     "\n",
     "Nous montrerons l'objet Time_Series qui permet de générer des jeux de données purements périodique avec possibilité de bruit gaussien. Nous illustrerons l'interaction de Time_series avec la classe Column et la classe layer. \n",
     "\n",
-    "Deux autres fichiers de démo mettent plutôt en valeur une utilisation globales des classes de gen_test.py et val_analy.py.\n"
+    "Deux autres fichiers de démo mettent plutôt en valeur une utilisation globales des classes de time_series.py et val_analy.py.\n"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# démo gen_test\n",
+    "# démo time_series\n",
     "from pyheatmy import *\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -62,7 +62,7 @@
     "\"\"\"Conditions limites\"\"\"\n",
     "# Température de la rivière\n",
     "zeroT = 0\n",
-    "#zeroT += ZERO_CELSIUS  #gen_test works only with forcings in celsius. See if it is deeper in pyheatmy or not\n",
+    "#zeroT += ZERO_CELSIUS  #time_series works only with forcings in celsius. See if it is deeper in pyheatmy or not\n",
     "\n",
     "T_riv_amp = 5\n",
     "T_riv_offset = 20  + zeroT\n",
@@ -214,7 +214,7 @@
     "nb_cells = 100\n",
     "print(emu_observ_test_user1._T_Shaft)\n",
     "emu_observ_test_user1._measures_column_one_layer(col, layers_list, nb_cells)\n",
-    "emu_observ_test_user1._plot_molonariT_data()\n",
+    "#emu_observ_test_user1._plot_molonariT_data()\n",
     "col.plot_temperature_at_sensors(verbose=False)\n",
     "\n"
    ]
@@ -286,14 +286,14 @@
     "newCol.print_RMSE_at_sensor()\n",
     "newCol.plot_compare_temperatures_sensors()\n",
     "col.plot_CALC_results()\n",
-    "newCol.print_in_file_processed_MOLONARI_dataset()"
+    "newCol.print_in_file_processed_MOLONARI_dataset(zeroT=0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Need to generate a MOLONARI dataset in core_py, printing the T at sensors and P measured. Ie a sort of export Processed data"
+    "### Need to generate a MOLONARI dataset in time_series.py, printing the T at sensors and P measured. Ie a sort of export Processed data"
    ]
   },
   {
