demo_val_direct.ipynb works properly. It demonstrates the fiability of pyheatmy with respect to analytical solutions

--- a/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "MOLONARI 2022 créé par Guillaume de Rochefort\n",
     "\n",
-    "Ceci est un notebook de démo pour la récupération de valeur de température d'après la solution numérique des équations hydrothermiques. Based on the ``Time_series`` class in ``gen_test.py``"
+    "Ceci est un notebook de démo pour la récupération de valeur de température d'après la solution numérique des équations hydrothermiques. Based on the ``Time_series`` class in ``time_series.py``"
    ]
   },
   {
@@ -89,8 +89,7 @@
     "    \"sigma_meas_T\": 0.1, #float\n",
     "}\n",
     "time_series = Time_series.from_dict(time_series_dict)\n",
-    "time_series._generate_perturb_T_riv_dH_series()\n",
-    "time_series._generate_perturb_Shaft_Temp_series()\n",
+    "time_series._generate_all_series(verbose=False)\n",
     "\n",
     "\"\"\"Colonne\"\"\"\n",
     "col_dict = {\n",
@@ -212,7 +211,7 @@
     "t_obs = 0\n",
     "\n",
     "plt.plot(analy_sol_exp.analy_temp_cond[:,t_obs],-analy_sol_exp._z_solve, label='Analy')\n",
-    "plt.plot(colonne_exp.temperaturesraturesraturesratures_solve[:,t_obs],-analy_sol_exp._z_solve, label='MD')\n",
+    "plt.plot(colonne_exp.temperatures_solve[:,t_obs],-analy_sol_exp._z_solve, label='MD')\n",
     "plt.plot(time_series._T_Shaft[t_obs],-np.array(colonne_exp.depth_sensors), marker='o',label='Tshaft variable')\n",
     "plt.legend()\n",
     "plt.grid()\n",
@@ -260,7 +259,7 @@
     "\n",
     "# saving to m4 using ffmpeg writer\n",
     "writervideo = animation.PillowWriter(fps=28)\n",
-    "anim.save('time_temp_profile.gif', writer=writervideo)\n",
+    "anim.save(f'{colonne_exp._dir_print}/time_temp_profile.gif', writer=writervideo)\n",
     "plt.close()\n",
     "\n"
    ]
