Virtual Lab and Virtual Point are generated with the same requirements than Point035. Only the derivative coefficients of Pvirtual are different. Pb I cannot import the virtual point in MOLONAVIZ even though I add fakes for the unecessary stuff as the png and notice

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -459,11 +459,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9efce205f64ad363cd9f14615485aca38ee4ef0915866e318aa83c8d0c93f6fc"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
