demo of a virtual sampling point works. The input data must be in kelvin otherwise noting works out. See demo_genData.ipynb

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,10 @@
     "\n",
     "# définition des attributs de colonnes\n",
     "dH_measures = list(zip(capteur_riviere['dates'],list(zip(capteur_riviere['dH'], capteur_riviere['temperature_riviere']))))\n",
-    "T_measures = list(zip(capteur_ZH['dates'], capteur_ZH[['temperature_10', 'temperature_20', 'temperature_30', 'temperature_40']].to_numpy()))"
+    "T_measures = list(zip(capteur_ZH['dates'], capteur_ZH[['temperature_10', 'temperature_20', 'temperature_30', 'temperature_40']].to_numpy()))\n",
+    "\n",
+    "print(f\"dH : {dH_measures}\")\n",
+    "print(f\"Tshaft : {T_measures}\")\n"
    ]
   },
   {
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +297,7 @@
    "source": [
     "priors = {\n",
     "    \"moinslog10IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
-    "    \"n\": ((.001, .25), .005),\n",
+    "    \"n\": ((.01, .25), .01),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
     "}\n",
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,11 +530,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "70704a3df61f63f9aa8fc9db7b3b80e15e7f08419e4b448d775ffd388e55e9a3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('projet_molonari')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
