--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -62,7 +62,7 @@
     "\"\"\"Conditions limites\"\"\"\n",
     "# Température de la rivière\n",
     "zeroT = 0\n",
-    "#zeroT += ZERO_CELSIUS  #time_series works only with forcings in celsius. See if it is deeper in pyheatmy or not\n",
+    "zeroT += ZERO_CELSIUS  #time_series works only with forcings in celsius. See if it is deeper in pyheatmy or not\n",
     "\n",
     "T_riv_amp = 5\n",
     "T_riv_offset = 20  + zeroT\n",
@@ -74,7 +74,7 @@
     "P_T_aq = -9999 # à mettre dans le init\n",
     "# Pression différentielle\n",
     "dH_amp = 0\n",
-    "dH_offset = 0.1 #1meter ?\n",
+    "dH_offset = 0.5 #1meter ?\n",
     "P_dh = -9999 #14*24*4*dt\n",
     "\n",
     "\n",
@@ -142,12 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "emu_observ_test_user1._generate_all_series(verbose=False)\n",
-    "\n"
+    "emu_observ_test_user1._generate_all_series(verbose=True)\n",
+    "print(f\"dH : {emu_observ_test_user1._molonariP_data}\")\n",
+    "print(f\"Tshaft : {emu_observ_test_user1._T_Shaft_measures}\")\n"
    ]
   },
   {
@@ -161,20 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name =\"Couche en sable\"\n",
     "zLow = Zbottom\n",
-    "moinslog10IntrinK = 10\n",
+    "moinslog10IntrinK = 11\n",
     "n = 0.1\n",
     "lambda_s = 2 # test cas purement advectif\n",
     "rhos_cs = 4e6\n",
     "\n",
     "# modèle une couche\n",
     "layers_list= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs)])\n",
+    "\n",
+    "print(f\"Layers list: {layers_list}\")\n",
     "\n",
     "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
     "col_dict = {\n",
@@ -183,10 +186,10 @@
     "\t\"offset\": .0,\n",
     "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user1._T_Shaft_measures,\n",
-    "    \"sigma_meas_P\": None, #float\n",
-    "    \"sigma_meas_T\": None, #float\n",
+    "    \"sigma_meas_P\": 0.01, #float\n",
+    "    \"sigma_meas_T\": 0.1, #float\n",
     "}\n",
-    "col = Column.from_dict(col_dict)"
+    "col = Column.from_dict(col_dict,verbose=True)"
    ]
   },
   {
@@ -215,7 +218,7 @@
     "print(emu_observ_test_user1._T_Shaft)\n",
     "emu_observ_test_user1._measures_column_one_layer(col, layers_list, nb_cells)\n",
     "#emu_observ_test_user1._plot_molonariT_data()\n",
-    "col.plot_temperature_at_sensors(verbose=False)\n",
+    "col.plot_temperature_at_sensors(verbose=True)\n",
     "\n"
    ]
   },
@@ -272,7 +275,7 @@
     "    \"sigma_meas_T\": None, #float\n",
     "}\n",
     "newCol = Column.from_dict(newCol_dict)\n",
-    "newCol.compute_solve_transi(layers_list, nb_cells,verbose=False)\n",
+    "newCol.compute_solve_transi(layers_list, nb_cells,verbose=True)\n",
     "\n",
     "nt = len(col._temperatures[0,:])\n",
     "dplot=15\n",
@@ -372,7 +375,7 @@
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name = [\"gravier\",\"Couche en sable\"]\n",
     "zLow = [.2,.4]\n",
-    "moinslog10IntrinK = [4,10]\n",
+    "moinslog10IntrinK = [14,10]\n",
     "n = [.4,.1]\n",
     "lambda_s = [2,2] \n",
     "rhos_cs = [4e6,4e6]\n",
